--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,6 @@
       <div class="navbar-header">
         <a id="navBarText" class=" navbar-brand" href="index.html">B-VOTE</a>
       </div>
-
     </div>
   </nav>
   <div class="container">
@@ -33,7 +32,7 @@
             <h1>
               <p class="text-center">Loading!...</br>
                 Please Insert Your Private Key to Begin</p>
-              <img class="text-center" src="./images/vote.jpg" alt="eci">
+              <img src="./images/vote.jpg" alt="eci">
             </h1>
           </div>
           <!--  <div id="ins" >
@@ -79,6 +78,26 @@
   <script src="js/truffle-contract.js"></script>
   <script src="js/app.js"></script>
   <!--   <script src="js/pie.js"></script> -->
+
+  <div id="myModal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Voted</h5>
+        </div>
+        <div class="modal-body">
+          <p>Thank you for voting!</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" onclick="$('#myModal').hide(); 
+            setTimeout(()=> {window.location.reload();},300);" class="btn btn-danger"
+            data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </body>
 
 </html>
